--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
     "require-dev": {
         "infection/infection": "^0.15.3",
         "maglnet/composer-require-checker": "^2.0",
+        "php-coveralls/php-coveralls": "^2.2",
         "phpunit/phpunit": "^8.5",
         "povils/phpmnd": "^2.2",
         "psalm/plugin-phpunit": "^0.9.0",
